2013-03-20  Christoph Anton Mitterer <mail@christoph.anton.mitterer.name>
	* Changed the end-of-line encodings of all non-Windows-related and 
	  non-autogenerated text files to use UNIX LF (lots of them had mixed
	  LF/CRLF).
	* HTML escape the remotely retrieved version string printed to the HTML
	  in order to prevent and attacks (if this would have been possible at
	  all in 12 characters).
	* Updated all addresses of the canonical git upstream repository and the
	  issue tracker to the new ones.

2013-03-06  Andrew McMillan  <andrew@morphoss.com>
	* Fix capitalisation of 'plpgsql' & 'sql' for Postgres 9.2. (debbug #702403)

2013-02-16  Andrew McMillan  <andrew@morphoss.com>
	* Content-Type header should be 'charset' not 'encoding'.

2012-09-20  Andrew McMillan  <andrew@morphoss.com>
	* When we get here it is a Bad Request, not a Server Error.
	* Quick workaround for iOS6 supported-calendar-component-set issue.
	  Adds a $c->default_calendar_components array of (VEVENT,VTODO,...)
	* Workaround client software with imperfect add-member implementations.

2012-09-10  Andrew McMillan  <andrew@morphoss.com>
	* Fix unassigned variable.
	* Avoid unassigned variable warning.
	* Fix UID handling.
	* Fix debugging to error log.

2012-08-09  Andrew McMillan  <andrew@morphoss.com>
	* Ensure test responses are displayed in their unprocessed form.
	* Some debugging messages.

2012-07-31  Andrew McMillan  <andrew@morphoss.com>
	* Replace deprecated split() with explode()

2012-05-28  Andrew McMillan  <andrew@morphoss.com>
	* First cut at iMIP implementation.  Still working on this.

2012-07-30  Andrew McMillan  <andrew@morphoss.com>
	* Fix SQL fieldname.

2012-07-29  Andrew McMillan  <andrew@morphoss.com>
	* Sometimes we want to retrieve the sync-token as a result of a change we just made.
	  This allows a (default true) flag to indicate whether it's OK to use
	  a previously cached value.
	* On Apple devices these can sometimes appear in the Apple namespace. Odd.