@@ -13,7 +13,7 @@ dbg_error_log("PUT", "method handler");
 require_once('DAVResource.php');
 
 if ( ! ini_get('open_basedir') && (isset($c->dbg['ALL']) || (isset($c->dbg['put']) && $c->dbg['put'])) ) {
-  $fh = fopen('/tmp/PUT.txt','w');
+  $fh = fopen('/var/log/davical/PUT.debug','w');
   if ( $fh ) {
     fwrite($fh,$request->raw_post);
     fclose($fh);
