@@ -1,3 +1,7 @@
+2013-03-21  Christoph Anton Mitterer <mail@christoph.anton.mitterer.name>
+	* Changed the pathnames of the debug files to be a bit more FHS
+	  compliant.
+
 2013-03-20  Christoph Anton Mitterer <mail@christoph.anton.mitterer.name>
 	* Changed the end-of-line encodings of all non-Windows-related and 
 	  non-autogenerated text files to use UNIX LF (lots of them had mixed
